# rime-harmony-ime

./: .gitignore  README.md  build-profile.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: librime-integration-plan.md
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/ets/components/: CandidateBar.ets  KeyButton.ets  KeyboardView.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/inputmethod/: KeyboardController.ets  RimeInputMethodExtensionAbility.ets
entry/src/main/ets/native/: RimeNativeBridge.ets  librime_bridge.d.ts
entry/src/main/ets/pages/: KeyboardPage.ets  SettingsPage.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: default_yaml  input_method_config.json  luna_pinyin_schema_yaml  main_pages.json
entry/src/main/resources/rawfile/rime/opencc/: t2s_text.json
native/rime_bridge/: CMakeLists.txt  napi_init.cpp  rime_bridge.cpp  rime_bridge.h  rime_engine.h  rime_engine_real.cpp  rime_engine_real.h  rime_engine_stub.cpp  rime_engine_stub.h
